Improve styling to prevent overflow

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -82,15 +82,15 @@
 .question {
   font-family: Karla;
   font-weight: bold;
-  font-size: 2rem;
-  line-height: 2rem;
+  font-size: 1.5rem;
+  line-height: 1.5rem;
   color: #293264;
 }
 
 .answers-container {
   display: flex;
   flex-wrap: nowrap;
-  margin-top: 1.625rem;
+  margin-top: 1rem;
   margin-bottom: 1rem;
 }
 
